Updated the Old English translation.

--- a/po/wesnoth-lib/ang.po
+++ b/po/wesnoth-lib/ang.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-05-18 06:14-0500\n"
+"PO-Revision-Date: 2012-08-15 12:54-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -817,12 +817,12 @@ msgstr "ᛞᚹᛇᚱᚷᛁᛋᚳ ᚦᚩᚱᛈ"
 #. [terrain_type]: id=hut_village
 #: data/core/terrain.cfg:1412
 msgid "Hut"
-msgstr ""
+msgstr "ᚻᚢᛚᚳ"
 
 #. [terrain_type]: id=hut_snow_village
 #: data/core/terrain.cfg:1425
 msgid "Snowy Hut"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᚻᚢᛚᚳ"
 
 #. [terrain_type]: id=logcabin_village
 #: data/core/terrain.cfg:1438
@@ -1115,7 +1115,7 @@ msgstr ""
 #. [toggle_button]: id=shroud
 #: data/core/terrain.cfg:2066 data/gui/default/window/mp_create_game.cfg:479
 msgid "Shroud"
-msgstr ""
+msgstr "ᛞᛇᚱᚳᚾᛖᛋᛋ"
 
 #. [terrain_type]: id=fog
 #: data/core/terrain.cfg:2075
@@ -1124,7 +1124,6 @@ msgstr "ᛗᛁᛋᛏ"
 
 #. [terrain_type]: id=flat
 #: data/core/terrain.cfg:2116
-#, fuzzy
 msgid "Flat"
 msgstr "ᚠᛁᛚᛞ"
 
@@ -1156,7 +1155,7 @@ msgstr ""
 #: data/gui/default/window/message.cfg:133 src/construct_dialog.cpp:134
 #: src/mapgen_dialog.cpp:110 src/preferences_display.cpp:273
 msgid "Close"
-msgstr ""
+msgstr "ᛏᚣᚾᚪᚾ"
 
 #. [label]
 #. [column]
@@ -1270,7 +1269,7 @@ msgstr "ᚾᚪᚾᚪ"
 #. [label]
 #: data/gui/default/window/addon_uninstall_list.cfg:51
 msgid "Uninstall Add-ons"
-msgstr ""
+msgstr "ᚫᛏᛠᚳᚪᚾ ᚢᚾᚩᚾᛋᛏᛖᛚᛚᚪᚾ"
 
 #. [scroll_label]
 #: data/gui/default/window/addon_uninstall_list.cfg:70
@@ -1337,7 +1336,7 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/chat_log.cfg:56
 msgid "Page:"
-msgstr ""
+msgstr "ᛏᚱᚪᛗᛖᚾᛏ:"
 
 #. [slider]: id=page_number
 #: data/gui/default/window/chat_log.cfg:69
@@ -1428,12 +1427,11 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/editor_generate_map.cfg:35
 msgid "Generate Random Map"
-msgstr ""
+msgstr "ᚷᛖᛚᛁᛗᛈᛚᛁᚳᚢ ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚳᛁᚾᚾᚪᚾ"
 
 #. [button]: id=next_generator
 #: data/gui/default/window/editor_generate_map.cfg:64
 #: data/gui/default/window/editor_generate_map.cfg:65
-#, fuzzy
 msgid "Next Generator"
 msgstr "ᚾᛁᛖᚻᛋᛏ ᚳᛁᚾᚾᛖᚾᛞ"
 
@@ -1524,7 +1522,6 @@ msgstr ""
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]
 #: data/gui/default/window/editor_settings.cfg:35 src/hotkeys.cpp:132
-#, fuzzy
 msgid "Editor Settings"
 msgstr "ᚪᛞᛁᚻᛏᛖᚾᛞᛖᛋ ᚳᚩᛋᛏᚪᛋ"
 
@@ -2012,8 +2009,9 @@ msgstr ""
 #. [button]: id=kick
 #: data/gui/default/window/lobby_player_info.cfg:168
 #: data/gui/default/window/mp_cmd_wrapper.cfg:389
+#, fuzzy
 msgid "Kick"
-msgstr ""
+msgstr "ᚢᛏᛋᛈᚩᚱᚾᛖᛏᛏᚪᚾ"
 
 #. [label]
 #: data/gui/default/window/lobby_player_info.cfg:175
@@ -2022,8 +2020,9 @@ msgstr ""
 
 #. [button]: id=kick_ban
 #: data/gui/default/window/lobby_player_info.cfg:188
+#, fuzzy
 msgid "Kick/ban"
-msgstr ""
+msgstr "ᚢᛏᛋᛈᚩᚱᚾᛖᛏᛏᚪᚾ/ᚠᚩᚱᛋᛖᚾᛞᚪᚾ"
 
 #. [label]: id=side_title
 #: data/gui/default/window/mp_change_control.cfg:21
@@ -2092,8 +2091,9 @@ msgstr ""
 
 #. [button]: id=ban
 #: data/gui/default/window/mp_cmd_wrapper.cfg:404
+#, fuzzy
 msgid "Ban"
-msgstr ""
+msgstr "ᚠᚩᚱᛋᛖᚾᛞᚪᚾ"
 
 #. [label]
 #: data/gui/default/window/mp_connect.cfg:60
@@ -2341,7 +2341,7 @@ msgstr ""
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:227
 msgid "Add-ons"
-msgstr ""
+msgstr "ᚫᛏᛠᚳᚪᚾ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:227
@@ -2350,14 +2350,14 @@ msgstr ""
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:228
-#, fuzzy
 msgid "Map Editor"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚪᛞᛁᚻᛏᛖᚾᛞ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:228
+#, fuzzy
 msgid "Start the map editor"
-msgstr ""
+msgstr "ᚦᚩᚾᛖ ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚪᛞᛁᚻᛏᛖᚾᛞ ᛋᛏᚣᚱᛏᚪᚾ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:229
@@ -2566,7 +2566,7 @@ msgstr ""
 
 #: src/game_preferences_display.cpp:202
 msgid "Theme"
-msgstr ""
+msgstr "ᚪᚾᛞᛏᛁᛗᛒᛖᚱ"
 
 #: src/game_preferences_display.cpp:203
 msgid "Hotkeys"
@@ -2903,7 +2903,7 @@ msgstr ""
 
 #: src/game_preferences_display.cpp:1292
 msgid "Choose Theme"
-msgstr ""
+msgstr "ᚪᚾᛞᛏᛁᛗᛒᛖᚱ ᚳᛇᛋᚪᚾ"
 
 #: src/game_preferences_display.cpp:1307
 msgid "New theme will take effect on next new or loaded game."
@@ -3169,9 +3169,8 @@ msgid "Animate Map"
 msgstr ""
 
 #: src/hotkeys.cpp:57
-#, fuzzy
 msgid "Next Unit"
-msgstr "ᚾᛁᛖᚻᛋᛏᚢ ᚹᛁᚻᛏ"
+msgstr "ᚾᛁᛖᚻᛋᛏ ᚹᛁᚻᛏ"
 
 #: src/hotkeys.cpp:58
 msgid "Previous Unit"
@@ -3346,7 +3345,6 @@ msgid "Next Side"
 msgstr ""
 
 #: src/hotkeys.cpp:107
-#, fuzzy
 msgid "Full Map"
 msgstr "ᚠᚢᛚᛚᚢ ᛚᚪᚾᛞᚳᚪᚱᛏᛖ"
 
@@ -3402,7 +3400,6 @@ msgid "Quit to Desktop"
 msgstr ""
 
 #: src/hotkeys.cpp:130
-#, fuzzy
 msgid "Close Map"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᛏᚣᚾᚪᚾ"
 
@@ -3439,21 +3436,20 @@ msgid "Swap Foreground/Background Terrains"
 msgstr ""
 
 #: src/hotkeys.cpp:143
-#, fuzzy
 msgid "Next Tool"
 msgstr "ᚾᛁᛖᚻᛋᛏ ᛏᚩᛚ"
 
 #: src/hotkeys.cpp:144
 msgid "Paint Tool"
-msgstr ""
+msgstr "ᛗᛖᛏᛁᛝᛏᚩᛚ"
 
 #: src/hotkeys.cpp:145
 msgid "Fill Tool"
-msgstr ""
+msgstr "ᚠᚣᛚᛚᛁᛝᛏᚩᛚ"
 
 #: src/hotkeys.cpp:146
 msgid "Selection Tool"
-msgstr ""
+msgstr "ᚳᛇᛋᚢᛝᛏᚩᛚ"
 
 #: src/hotkeys.cpp:148
 msgid "Set Starting Positions Tool"
@@ -3468,7 +3464,6 @@ msgid "Default Brush"
 msgstr ""
 
 #: src/hotkeys.cpp:151
-#, fuzzy
 msgid "Cut"
 msgstr "ᚢᛏᛋᚾᛁᚦᚪᚾ"
 
@@ -3489,8 +3484,9 @@ msgid "Select All"
 msgstr "ᛠᛚᛚ ᚳᛇᛋᚪᚾ"
 
 #: src/hotkeys.cpp:158
+#, fuzzy
 msgid "Select Inverse"
-msgstr ""
+msgstr "ᚳᛇᛋᚢᛝᛖ ᚩᚾᚻᚹᛁᚱᚠᚪᚾ"
 
 #: src/hotkeys.cpp:160
 msgid "Select None"
@@ -3513,7 +3509,6 @@ msgid "Flip Clipboard Vertically"
 msgstr ""
 
 #: src/hotkeys.cpp:170
-#, fuzzy
 msgid "Rotate Selection"
 msgstr "ᚳᛇᛋᚢᛝᛖ ᛏᚢᚱᚾᛁᚪᚾ"
 
@@ -3522,20 +3517,19 @@ msgid "Flip Selection"
 msgstr ""
 
 #: src/hotkeys.cpp:174
-#, fuzzy
 msgid "Fill Selection"
 msgstr "ᚳᛇᛋᚢᛝᛖ ᚠᚣᛚᛚᚪᚾ"
 
 #: src/hotkeys.cpp:176
+#, fuzzy
 msgid "Generate Tiles In Selection"
-msgstr ""
+msgstr "ᛏᛁᚷᛖᛚᚪᚾ ᚩᚾ ᚳᛇᛋᚢᛝᛖ ᚳᛁᚾᚾᚪᚾ"
 
 #: src/hotkeys.cpp:178
 msgid "Randomize Tiles In Selection"
 msgstr ""
 
 #: src/hotkeys.cpp:182
-#, fuzzy
 msgid "Rotate Map"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᛏᚢᚱᚾᛁᚪᚾ"
 
@@ -3648,7 +3642,6 @@ msgid "Manage Add-ons"
 msgstr ""
 
 #: src/hotkeys.cpp:270
-#, fuzzy
 msgid "Start Editor"
 msgstr "ᚪᛞᛁᚻᛏᛖᚾᛞ ᛋᛏᚣᚱᛏᚪᚾ"
 
@@ -3687,7 +3680,6 @@ msgid "language code for localized resources^en_US"
 msgstr "ang"
 
 #: src/mapgen_dialog.cpp:113
-#, fuzzy
 msgid "Map Generator"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚳᛁᚾᚾᛖᚾᛞ"
 
