--- a/po/wesnoth-units/ang@latin.po
+++ b/po/wesnoth-units/ang@latin.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-04-06 01:00-0500\n"
+"PO-Revision-Date: 2012-06-07 23:30-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -274,7 +274,7 @@ msgstr ""
 #: data/core/units/undead/Necro_Ancient_Lich.cfg:60
 #: data/core/units/undead/Necro_Lich.cfg:60
 msgid "chill tempest"
-msgstr "cieles hrið"
+msgstr "cielhrið"
 
 #. [attack]: type=arcane
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Rune_Lord.cfg:56
@@ -284,12 +284,12 @@ msgstr "cieles hrið"
 #: data/core/units/undead/Necro_Lich.cfg:72
 #: data/core/units/undead/Necromancer.cfg:63
 msgid "shadow wave"
-msgstr "sceadu ƿaðum"
+msgstr "sceaduƿaðum"
 
 #. [unit_type]: id=Blood Bat, race=bats
 #: data/core/units/bats/Bat_Blood.cfg:4
 msgid "Blood Bat"
-msgstr "Blod Hreaðemus"
+msgstr "Blodhreaðemus"
 
 #. [unit_type]: id=Blood Bat, race=bats
 #: data/core/units/bats/Bat_Blood.cfg:20
@@ -443,7 +443,7 @@ msgstr ""
 #: data/core/units/drakes/Armageddon.cfg:56 data/core/units/drakes/Fire.cfg:41
 #: data/core/units/drakes/Inferno.cfg:43
 msgid "battle claws"
-msgstr "beadu claƿe"
+msgstr "beaduclaƿe"
 
 #. [attack]: type=fire
 #: data/core/units/drakes/Armageddon.cfg:65
@@ -457,7 +457,7 @@ msgstr "beadu claƿe"
 #: data/core/units/monsters/Fire_Dragon.cfg:49
 #: data/core/units/monsters/Fire_Guardian.cfg:40
 msgid "fire breath"
-msgstr "fyr bræþ"
+msgstr "fyrbræþ"
 
 #. [unit_type]: id=Drake Blademaster, race=drake
 #: data/core/units/drakes/Blademaster.cfg:4
@@ -776,7 +776,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:4
 msgid "Dwarvish Berserker"
-msgstr "Dƿeorgisc Beraserca"
+msgstr "Dƿeorgisc Berserca"
 
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:19
@@ -791,7 +791,7 @@ msgstr ""
 #: data/core/units/dwarves/Ulfserker.cfg:44
 #, fuzzy
 msgid "berserker frenzy"
-msgstr "beraserca ƿodnes"
+msgstr "bersercan ƿodnes"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #: data/core/units/dwarves/Dragonguard.cfg:4
@@ -936,7 +936,7 @@ msgstr ""
 #. [unit_type]: id=Elvish Archer, race=elf
 #: data/core/units/elves/Archer.cfg:4
 msgid "Elvish Archer"
-msgstr ""
+msgstr "Ælfisc Scytta"
 
 #. [unit_type]: id=Elvish Archer, race=elf
 #: data/core/units/elves/Archer.cfg:20
@@ -999,8 +999,9 @@ msgstr "boga"
 
 #. [female]
 #: data/core/units/elves/Archer.cfg:157
+#, fuzzy
 msgid "female^Elvish Archer"
-msgstr ""
+msgstr "Ælfisc Scytta"
 
 #. [unit_type]: id=Elvish Avenger, race=elf
 #: data/core/units/elves/Avenger.cfg:4
@@ -1177,7 +1178,7 @@ msgstr ""
 #. [unit_type]: id=Elvish Lady, race=elf
 #: data/core/units/elves/Lady.cfg:5
 msgid "female^Elvish Lady"
-msgstr "Ælfiscu Hlafdige"
+msgstr "Ælfisc Hlafdige"
 
 #. [unit_type]: id=Elvish Lady, race=elf
 #: data/core/units/elves/Lady.cfg:21
@@ -1510,7 +1511,7 @@ msgstr ""
 #. [unit_type]: id=Goblin Spearman, race=goblin
 #: data/core/units/goblins/Spearman.cfg:4
 msgid "Goblin Spearman"
-msgstr "Puca Speremann"
+msgstr "Pucsperemann"
 
 #. [unit_type]: id=Goblin Spearman, race=goblin
 #: data/core/units/goblins/Spearman.cfg:21
@@ -1529,7 +1530,7 @@ msgstr ""
 #. [unit_type]: id=Wolf Rider, race=wolf
 #: data/core/units/goblins/Wolf_Rider.cfg:4
 msgid "Wolf Rider"
-msgstr "Ƿulf Ridda"
+msgstr "Ƿulfridda"
 
 #. [unit_type]: id=Wolf Rider, race=wolf
 #: data/core/units/goblins/Wolf_Rider.cfg:36
@@ -1696,11 +1697,10 @@ msgid ""
 "provide inviting targets."
 msgstr ""
 
-# Espreon sayeth: "Although this term is probably valid, perhaps we should see if it's attested."
 #. [unit_type]: id=Bowman, race=human
 #: data/core/units/humans/Loyalist_Bowman.cfg:4
 msgid "Bowman"
-msgstr "Bogamann"
+msgstr "Scytta"
 
 #. [unit_type]: id=Bowman, race=human
 #: data/core/units/humans/Loyalist_Bowman.cfg:20
@@ -1963,7 +1963,7 @@ msgstr ""
 #. [unit_type]: id=Longbowman, race=human
 #: data/core/units/humans/Loyalist_Longbowman.cfg:4
 msgid "Longbowman"
-msgstr "Langbogamann"
+msgstr "Langbogscytta"
 
 #. [unit_type]: id=Longbowman, race=human
 #: data/core/units/humans/Loyalist_Longbowman.cfg:20
@@ -2958,7 +2958,7 @@ msgstr "blæc"
 #. [unit_type]: id=Fire Dragon, race=monster
 #: data/core/units/monsters/Fire_Dragon.cfg:4
 msgid "Fire Dragon"
-msgstr "Fyr Ƿyrm"
+msgstr "Fyrƿyrm"
 
 #. [unit_type]: id=Fire Dragon, race=monster
 #: data/core/units/monsters/Fire_Dragon.cfg:24
@@ -3005,7 +3005,7 @@ msgstr ""
 #. [attack]: type=fire
 #: data/core/units/monsters/Fire_Guardian.cfg:31
 msgid "fire claws"
-msgstr "fyr claƿe"
+msgstr "fyrclaƿe"
 
 #. [unit_type]: id=Giant Mudcrawler, race=monster
 #: data/core/units/monsters/Giant_Mudcrawler.cfg:4
@@ -3119,9 +3119,8 @@ msgstr ""
 
 #. [unit_type]: id=Skeletal Dragon, race=undead
 #: data/core/units/monsters/Skeletal_Dragon.cfg:4
-#, fuzzy
 msgid "Skeletal Dragon"
-msgstr "Bancofalic Ƿyrm"
+msgstr "Bancoflic Ƿyrm"
 
 #. [unit_type]: id=Skeletal Dragon, race=undead
 #: data/core/units/monsters/Skeletal_Dragon.cfg:26
@@ -3330,7 +3329,7 @@ msgstr ""
 #. [unit_type]: id=Orcish Archer, race=orc
 #: data/core/units/orcs/Archer.cfg:4
 msgid "Orcish Archer"
-msgstr ""
+msgstr "Orcisc Scytta"
 
 #. [unit_type]: id=Orcish Archer, race=orc
 #: data/core/units/orcs/Archer.cfg:20
@@ -3392,7 +3391,7 @@ msgstr ""
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:4
 msgid "Orcish Leader"
-msgstr ""
+msgstr "Orcisc Lædere"
 
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:20
@@ -3618,7 +3617,7 @@ msgstr ""
 #. [unit_type]: id=Troll Hero, race=troll
 #: data/core/units/trolls/Hero.cfg:4
 msgid "Troll Hero"
-msgstr "Eoten Hæleþ"
+msgstr "Eotenhæleþ"
 
 #. [unit_type]: id=Troll Hero, race=troll
 #: data/core/units/trolls/Hero.cfg:17
@@ -3631,7 +3630,7 @@ msgstr ""
 #. [unit_type]: id=Troll Rocklobber, race=troll
 #: data/core/units/trolls/Rocklobber.cfg:4
 msgid "Troll Rocklobber"
-msgstr "Eoten Stantorfa"
+msgstr "Eotenstantorfa"
 
 #. [unit_type]: id=Troll Rocklobber, race=troll
 #: data/core/units/trolls/Rocklobber.cfg:19
@@ -3675,12 +3674,12 @@ msgstr ""
 #. [attack]: type=fire
 #: data/core/units/trolls/Troll_Shaman.cfg:41
 msgid "flame blast"
-msgstr "lig blæst"
+msgstr "ligblæst"
 
 #. [unit_type]: id=Troll Warrior, race=troll
 #: data/core/units/trolls/Warrior.cfg:4
 msgid "Troll Warrior"
-msgstr "Eoten Ƿigend"
+msgstr "Eotenƿigend"
 
 #. [unit_type]: id=Troll Warrior, race=troll
 #: data/core/units/trolls/Warrior.cfg:19
@@ -3698,7 +3697,7 @@ msgstr ""
 #. [unit_type]: id=Troll Whelp, race=troll
 #: data/core/units/trolls/Whelp.cfg:4
 msgid "Troll Whelp"
-msgstr "Eoten Hƿelp"
+msgstr "Eotenhƿelp"
 
 #. [unit_type]: id=Troll Whelp, race=troll
 #: data/core/units/trolls/Whelp.cfg:19
@@ -3764,8 +3763,9 @@ msgstr ""
 
 #. [unit_type]: id=Soulless, race=undead
 #: data/core/units/undead/Corpse_Soulless.cfg:6
+#, fuzzy
 msgid "Soulless"
-msgstr ""
+msgstr "Saƿolleas"
 
 #. [unit_type]: id=Soulless, race=undead
 #: data/core/units/undead/Corpse_Soulless.cfg:20
@@ -3838,7 +3838,7 @@ msgstr ""
 #: data/core/units/undead/Necro_Dark_Sorcerer.cfg:108
 #: data/core/units/undead/Necromancer.cfg:51
 msgid "chill wave"
-msgstr "ciele ƿaðum"
+msgstr "cielƿaðum"
 
 #. [female]
 #: data/core/units/undead/Necro_Dark_Adept.cfg:295
@@ -3937,7 +3937,7 @@ msgstr ""
 #. [attack]: type=impact
 #: data/core/units/undead/Necromancer.cfg:39
 msgid "plague staff"
-msgstr "ƿol stæf"
+msgstr "ƿoles stæf"
 
 #. [female]
 #: data/core/units/undead/Necromancer.cfg:254
@@ -3947,7 +3947,7 @@ msgstr "Hellrune"
 #. [unit_type]: id=Banebow, race=undead
 #: data/core/units/undead/Skele_Banebow.cfg:5
 msgid "Banebow"
-msgstr "Banaboga"
+msgstr "Banboga"
 
 #. [unit_type]: id=Banebow, race=undead
 #: data/core/units/undead/Skele_Banebow.cfg:19
@@ -3961,9 +3961,8 @@ msgstr ""
 
 #. [unit_type]: id=Bone Shooter, race=undead
 #: data/core/units/undead/Skele_Bone_Shooter.cfg:4
-#, fuzzy
 msgid "Bone Shooter"
-msgstr "Ban Sceotend"
+msgstr "Banscytta"
 
 #. [unit_type]: id=Bone Shooter, race=undead
 #: data/core/units/undead/Skele_Bone_Shooter.cfg:17
@@ -4066,9 +4065,8 @@ msgstr ""
 
 #. [unit_type]: id=Skeleton Archer, race=undead
 #: data/core/units/undead/Skeleton_Archer.cfg:4
-#, fuzzy
 msgid "Skeleton Archer"
-msgstr "Bancofa Scytta"
+msgstr "Bancofscytta"
 
 #. [unit_type]: id=Skeleton Archer, race=undead
 #: data/core/units/undead/Skeleton_Archer.cfg:18
@@ -4151,7 +4149,7 @@ msgstr ""
 #: data/core/units/undead/Spirit_Spectre.cfg:59
 #: data/core/units/undead/Spirit_Wraith.cfg:34
 msgid "baneblade"
-msgstr "banaecg"
+msgstr "banecg"
 
 #. [unit_type]: id=Wraith, race=undead
 #: data/core/units/undead/Spirit_Wraith.cfg:4
