--- a/po/wesnoth/ang.po
+++ b/po/wesnoth/ang.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-05-18 06:08-0500\n"
+"PO-Revision-Date: 2012-08-15 12:37-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -326,13 +326,17 @@ msgstr "ᚪᚱᚪᛒᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1265
+#, fuzzy
 msgid "Basque Translation"
-msgstr ""
+msgstr "ᚹᚪᛋᚳᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
+# Espreon asketh: "Or should I be using 'Pulgarisc'? 'Bulgarisc' is valid,
+# but..."
 #. [about]
 #: data/core/about.cfg:1278
+#, fuzzy
 msgid "Bulgarian Translation"
-msgstr ""
+msgstr "ᛒᚢᛚᚷᚪᚱᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1297
@@ -388,8 +392,9 @@ msgstr "ᛖᛋᛈᛖᚱᚪᚾᛏᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1646
+#, fuzzy
 msgid "Estonian Translation"
-msgstr ""
+msgstr "ᛖᛋᛏᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1656
@@ -419,7 +424,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1914
 msgid "German Translation"
-msgstr ""
+msgstr "ᚦᛇᛞᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1988
@@ -551,7 +556,6 @@ msgstr "ᛋᛈᛇᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 msgid "Swedish Translation"
 msgstr "ᛋᚹᛇᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
-# Espreon sayeth: I dunno, I felt like using cealc...
 #. [about]
 #: data/core/about.cfg:2754
 msgid "Turkish Translation"
@@ -767,20 +771,23 @@ msgid "Set special orders..."
 msgstr ""
 
 #: data/core/macros/ai_controller.cfg:976
+#, fuzzy
 msgid "Move leader to..."
-msgstr ""
+msgstr "ᚹᛖᚷᚪᚾ ᛚᚫᛞᛖᚱᛖ ᛏᚩ..."
 
 #: data/core/macros/ai_controller.cfg:977
 msgid "Right-click to select a location to move leader to"
 msgstr ""
 
 #: data/core/macros/ai_controller.cfg:978
+#, fuzzy
 msgid "Move leader here"
-msgstr ""
+msgstr "ᛚᚫᛞᛖᚱᛖ ᚻᛖᚱ ᚹᛖᚷᚪᚾ"
 
 #: data/core/macros/ai_controller.cfg:979
+#, fuzzy
 msgid "moving leader to $x1|,$y1|."
-msgstr ""
+msgstr "ᚹᛖᚷᛖᚾᛞᛖ ᛚᚫᛞᛖᚱᛖ ᛏᚩ $x1|,$y1|."
 
 #: data/core/macros/ai_controller.cfg:980
 msgid "Clear special orders"
@@ -932,7 +939,7 @@ msgstr ""
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:460
 msgid "Staff of Swiftness"
-msgstr ""
+msgstr "ᛋᚹᛁᚠᛏᚾᛖᛋᛋᛖ ᛋᛏᚫᚠ"
 
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:463
@@ -2391,7 +2398,6 @@ msgstr ""
 
 #. [tip]
 #: data/hardwired/tips.cfg:221 data/hardwired/tips.cfg:233
-#, fuzzy
 msgid "<i>― Lord Hamel of Knalga</i>"
 msgstr "<i>― ᚳᚾᚪᛚᚷᚪᚾ ᚻᚪᛗᛖᛚ ᚻᛚᚪᚠᚩᚱᛞ</i>"
 
@@ -2443,12 +2449,10 @@ msgid "slowed"
 msgstr "ᚷᛖᚠᚩᚱᛋᛚᚫᚹᛖᛞ"
 
 #: data/lua/wml-tags.lua:827 src/actions.cpp:1502
-#, fuzzy
 msgid "female^petrified"
 msgstr "ᚠᚩᚱᛋᛏᚪᚾᚩᛞᚢ"
 
 #: data/lua/wml-tags.lua:827 src/actions.cpp:1502
-#, fuzzy
 msgid "petrified"
 msgstr "ᚠᚩᚱᛋᛏᚪᚾᚩᛞ"
 
@@ -2537,7 +2541,6 @@ msgstr ""
 #. [menu]: id=button-endturn
 #: data/themes/default.cfg:156 data/themes/dfool.cfg:167
 #: data/themes/widescreen.cfg:188
-#, fuzzy
 msgid "End Scenario"
 msgstr "ᚳᚪᛈᛁᛏᚩᛚ ᛖᚾᛞᛁᚪᚾ"
 
@@ -2597,7 +2600,7 @@ msgstr ""
 #: data/themes/experimental.cfg:376 data/themes/widescreen.cfg:500
 #: data/themes/widescreen.cfg:626
 msgid "statuspanel^level"
-msgstr ""
+msgstr "ᛗᚫᚦ"
 
 #. [unit_moves]: id=unit-moves
 #. [selected_unit_moves]: id=selected-unit-moves
@@ -2686,7 +2689,6 @@ msgstr ""
 
 #: src/about.cpp:209 src/menu_events.cpp:325 src/menu_events.cpp:352
 #: src/statistics_dialog.cpp:114
-#, fuzzy
 msgid "Close"
 msgstr "ᛏᚣᚾᚪᚾ"
 
@@ -2825,7 +2827,7 @@ msgstr ""
 
 #: src/addon/manager.cpp:530
 msgid "Sending add-on"
-msgstr ""
+msgstr "ᛋᛖᚾᛞᛖᚾᛞᛖ ᚫᛏᛠᚳᚪᚾ"
 
 #: src/addon/manager.cpp:535 src/addon/manager.cpp:560
 msgid "The server responded with an error: \""
@@ -2859,7 +2861,7 @@ msgstr ""
 
 #: src/addon/manager.cpp:649
 msgid "Add-on Installed"
-msgstr ""
+msgstr "ᚫᛏᛠᚳᚪᚾ ᚷᛖᚩᚾᛋᛏᛠᛚᛞ"
 
 #: src/addon/manager.cpp:749 src/addon/manager.cpp:935
 #: src/addon/manager.cpp:1164 src/dialogs.cpp:609 src/menu_events.cpp:213
@@ -3032,7 +3034,7 @@ msgstr ""
 
 #: src/addon/manager.cpp:1285
 msgid "Get add-ons"
-msgstr ""
+msgstr "ᚫᛏᛠᚳᚪᚾ ᚷᛁᛖᛏᚪᚾ"
 
 #: src/addon/manager.cpp:1286
 msgid "Choose the add-on to download."
@@ -3274,8 +3276,9 @@ msgid "Profile"
 msgstr ""
 
 #: src/dialogs.cpp:827
+#, fuzzy
 msgid "level"
-msgstr ""
+msgstr "ᛗᚫᚦ"
 
 #: src/dialogs.cpp:840
 msgid "HP: "
@@ -3435,7 +3438,7 @@ msgstr "ᛗᛁᛋᛏ"
 #: src/gui/dialogs/lobby/lobby_data.cpp:313 src/multiplayer_create.cpp:91
 #: src/multiplayer_lobby.cpp:565 src/multiplayer_lobby.cpp:571
 msgid "Shroud"
-msgstr ""
+msgstr "ᛞᛇᚱᚳᚾᛖᛋᛋ"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:315 src/multiplayer_lobby.cpp:575
 #, fuzzy
@@ -3489,7 +3492,7 @@ msgstr ""
 #: src/leader_list.cpp:138 src/menu_events.cpp:1566
 #: src/multiplayer_connect.cpp:224 src/multiplayer_connect.cpp:268
 msgid "gender^Random"
-msgstr ""
+msgstr "ᚷᛖᛚᛁᛗᛈᛚᛁᚳᚢ"
 
 #: src/leader_list.cpp:148 src/multiplayer_connect.cpp:220
 #: src/multiplayer_connect.cpp:264
@@ -3502,8 +3505,9 @@ msgid "Male ♂"
 msgstr "ᚹᛖᚱᛚᛁᚳ ♂"
 
 #: src/leader_list.cpp:163 src/leader_list.cpp:188
+#, fuzzy
 msgid "Random"
-msgstr ""
+msgstr "ᚷᛖᛚᛁᛗᛈᛚᛁᚳ"
 
 #: src/leader_list.cpp:236 src/leader_list.cpp:242
 msgid "?"
@@ -3617,7 +3621,7 @@ msgstr ""
 
 #: src/menu_events.cpp:217 src/menu_events.cpp:888
 msgid "Level^Lvl."
-msgstr ""
+msgstr "ᛗᚫᚦ"
 
 #: src/menu_events.cpp:219
 msgid "unit list^Traits"
@@ -3700,7 +3704,7 @@ msgstr "ᛗᛁᛋᛏ"
 
 #: src/menu_events.cpp:514
 msgid "scenario settings^Shroud"
-msgstr ""
+msgstr "ᛞᛇᚱᚳᚾᛖᛋᛋ"
 
 #: src/menu_events.cpp:563 src/menu_events.cpp:564
 msgid "no"
@@ -3815,9 +3819,8 @@ msgid "Some units have movement left. Do you really want to end your turn?"
 msgstr ""
 
 #: src/menu_events.cpp:1459
-#, fuzzy
 msgid "Rename Unit"
-msgstr "ᚹᛁᚻᛏᛖ ᛖᚠᛏᚾᚪᛗᚪᚾ"
+msgstr "ᚹᛁᚻᛏᛖ ᛖᚠᛏᚾᛖᛗᚾᚪᚾ"
 
 #: src/menu_events.cpp:1539
 msgid "Race"
@@ -4728,7 +4731,7 @@ msgstr ""
 
 #: src/multiplayer_create.cpp:96
 msgid "Regenerate"
-msgstr ""
+msgstr "ᛖᚠᛏᚳᛁᚾᚾᚪᚾ"
 
 #: src/multiplayer_create.cpp:97
 msgid "Settings..."
@@ -4916,7 +4919,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:748
 msgid "Invert"
-msgstr ""
+msgstr "ᚩᚾᚻᚹᛁᚱᚠᚪᚾ"
 
 #: src/multiplayer_lobby.cpp:749
 msgid "Vacant slots"
@@ -4972,7 +4975,6 @@ msgid "Invalid Color"
 msgstr ""
 
 #: src/multiplayer_ui.cpp:426
-#, fuzzy
 msgid "Selected user: "
 msgstr "ᚷᛖᚳᚩᚱᛖᚾ ᛒᚱᚢᚳᛖᚾᛞ: "
 
@@ -5251,7 +5253,7 @@ msgstr "ᚳᚣᚾᚾ: "
 
 #: src/reports.cpp:237
 msgid "Level: "
-msgstr ""
+msgstr "ᛗᚫᚦ: "
 
 #: src/reports.cpp:240
 msgid "No advancement"
@@ -5327,7 +5329,6 @@ msgid "Experience Modifier: "
 msgstr ""
 
 #: src/reports.cpp:493
-#, fuzzy
 msgid "Terrain: "
 msgstr "ᛚᚪᚾᛞ: "
 
@@ -5409,19 +5410,19 @@ msgstr ""
 
 #: src/reports.cpp:964
 msgid "Lawful units: "
-msgstr ""
+msgstr "ᛞᚫᚷᛚᛁᚳᚪ ᚹᛁᚻᛏᚪ: "
 
 #: src/reports.cpp:965
 msgid "Neutral units: "
-msgstr ""
+msgstr "ᛖᚠᛖᚾᚪ ᚹᛁᚻᛏᚪ: "
 
 #: src/reports.cpp:966
 msgid "Chaotic units: "
-msgstr ""
+msgstr "ᚾᛁᚻᛏᛚᛁᚳᚪ ᚹᛁᚻᛏᚪ: "
 
 #: src/reports.cpp:967
 msgid "Liminal units: "
-msgstr ""
+msgstr "ᚷᛚᚩᛗᛚᛁᚳᚪ ᚹᛁᚻᛏᚪ: "
 
 #: src/reports.cpp:1180
 msgid "Observers:"
@@ -5746,35 +5747,35 @@ msgstr ""
 
 #: src/unit_types.cpp:976
 msgid "chaotic"
-msgstr ""
+msgstr "ᚾᛁᚻᛏᛚᛁᚳ"
 
 #: src/unit_types.cpp:976
 msgid "lawful"
-msgstr ""
+msgstr "ᛞᚫᚷᛚᛁᚳ"
 
 #: src/unit_types.cpp:976
 msgid "liminal"
-msgstr ""
+msgstr "ᚷᛚᚩᛗᛚᛁᚳ"
 
 #: src/unit_types.cpp:976
 msgid "neutral"
-msgstr ""
+msgstr "ᛖᚠᛖᚾ"
 
 #: src/unit_types.cpp:977
 msgid "female^chaotic"
-msgstr ""
+msgstr "ᚾᛁᚻᛏᛚᛁᚳᚢ"
 
 #: src/unit_types.cpp:977
 msgid "female^lawful"
-msgstr ""
+msgstr "ᛞᚫᚷᛚᛁᚳᚢ"
 
 #: src/unit_types.cpp:977
 msgid "female^liminal"
-msgstr ""
+msgstr "ᚷᛚᚩᛗᛚᛁᚳᚢ"
 
 #: src/unit_types.cpp:977
 msgid "female^neutral"
-msgstr ""
+msgstr "ᛖᚠᛖᚾᚢ"
 
 #: src/whiteboard/manager.cpp:1138
 msgid "SHOW ALL allies’ plans"
