--- a/po/wesnoth-utbs/sk.po
+++ b/po/wesnoth-utbs/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-06-27 20:46+0100\n"
+"PO-Revision-Date: 2012-08-15 20:18+0100\n"
 "Last-Translator: Martin Dzbor <mdzbor@yahoo.co.uk>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2900,6 +2900,13 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2613
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2877
+#, fuzzy
+#| msgid ""
+#| "We have suffered losses, but we are not broken yet. We have saved most of "
+#| "our people tonight. But while elves who have fought with you in the past "
+#| "will gladly return, as the numbers of our people dwindle, it’s going to "
+#| "become more and more costly to recruit new warriors. It would be wise to "
+#| "stockpile gold against this eventuality."
 msgid ""
 "We have suffered losses, but we we are not broken yet. We have saved most of "
 "our people tonight. But while elves who have fought with you in the past "
@@ -2915,6 +2922,14 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2622
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2886
+#, fuzzy
+#| msgid ""
+#| "We have suffered grievous losses, but we are not broken yet. Long will "
+#| "this slaughter be remembered by our people. Where was Eloh during the "
+#| "darkness? And I’m afraid that while elves who have fought with you in the "
+#| "past will gladly return, as the numbers of our people dwindle, it’s going "
+#| "to become more and more costly to recruit new warriors. It would be wise "
+#| "to stockpile gold against this eventuality."
 msgid ""
 "We have suffered grievous losses, but we we are not broken yet. Long will "
 "this slaughter be remembered by our people. Where was Eloh during the "
@@ -17492,6 +17507,14 @@ msgstr "Dlhá tma (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "Dlhá tma (4)"
+
+#~| msgid "Should I take this sword?"
+#~ msgid "Should I take this ring?"
+#~ msgstr "Mám si vziať ten prsteň?"
+
+#~| msgid "No, I think someone else should wield it."
+#~ msgid "No, I think someone else should wear it."
+#~ msgstr "Nie, myslím, že by ho mal niesť niekto iný."
 
 #~ msgid ""
 #~ "Desert Shamans focus on less violent ways to hinder the enemy. Their "
